--- a/locales/en.json
+++ b/locales/en.json
@@ -619,5 +619,5 @@
 	"Cream": "Cream",
 	"Light Purple": "Light Purple",
 	"Save Logo Mask": "Save Logo Mask",
-	"Edit Logo Mask": "Edit Logo Mask"
+	"Edit Logo Mask": "Editar logo"
 }
