--- a/locales/en.json
+++ b/locales/en.json
@@ -567,57 +567,76 @@
 	"Location of Object": "Ubicacion",
 	"Nombre del vendedor": "Nombre del vendedor",
 	"Cantidad que puede vender": "Cantidad que puede vender",
-	"Navigation": "Navigation",
-	"Masked Logo Images": "Masked Logo Images",
-	"On page load, choose one randomly and mask it with the logomark": "On page load, choose one randomly and mask it with the logomark",
-	"Enable Demo Mode?": "Enable Demo Mode?",
-	"This will turn on introductory modal windows when a user first arrives, introducing them to ApostrpoheCMS": "This will turn on introductory modal windows when a user first arrives, introducing them to ApostrpoheCMS",
+	"Navigation": "Navegacion",
+	"Masked Logo Images": "Imágenes de logotipos enmascarados",
+	"On page load, choose one randomly and mask it with the logomark": "En la carga de la página, elija uno al azar y enmascarelo con el logomark",
+	"Enable Demo Mode?": "¿Habilitar el modo de demostración?",
+	"This will turn on introductory modal windows when a user first arrives, introducing them to ApostrpoheCMS": "Esto activará las ventanas modales introductorias cuando un usuario llegue por primera vez, presentándolo a ApostrpoheCMS",
 	"Google Analytics Tracking ID": "Google Analytics Tracking ID",
-	"If present, traffic will be tracked to this Google Analytics property.": "If present, traffic will be tracked to this Google Analytics property.",
+	"If present, traffic will be tracked to this Google Analytics property.": "Si está presente, se realizará un seguimiento del tráfico a esta propiedad de Google Analytics.",
 	"Add Artist": "Agregar producto",
 	"Search Artists...": "Buscar producto...",
 	"Add Artwork": "Agregar venta",
 	"Search Artworks...": "Buscar ventas...",
-	"What type of images": "What type of images",
-	"Media Library": "Media Library",
-	"Artwork": "Artwork",
-	"Gallery Title": "Gallery Title",
-	"Save Article": "Save Article",
+	"What type of images": "Que tipo de imagenes",
+	"Media Library": "Mediateca",
+	"Artwork": "Tienda",
+	"Gallery Title": "Título de la galería",
+	"Save Article": "Guardar Articulo",
 	"Thumbnail": "Thumbnail",
-	"Update Article": "Update Article",
-	"Article Versions": "Article Versions",
-	"Trash Article": "Trash Article",
+	"Update Article": "Actualizar Articulo",
+	"Article Versions": "Articulo Versiones",
+	"Trash Article": "Borrar Articulo",
 	"Pagina de inicio dinamica": "Pagina de inicio dinamica",
-	"Save Single Image": "Save Single Image",
-	"Image": "Image",
+	"Save Single Image": "Guardar Imagen unica",
+	"Image": "Imagen",
 	"Caption": "Caption",
-	"Edit Single Image": "Edit Single Image",
-	"Save Mixed Content": "Save Mixed Content",
-	"Content to Link": "Content to Link",
-	"Choose Documents": "Choose Documents",
-	"Select the appropriate tab to choose each type of content.": "Select the appropriate tab to choose each type of content.",
-	"Choose Artworks": "Choose Artworks",
-	"Choose Artworks to associate with this item.": "Choose Artworks to associate with this item.",
-	"New Artwork": "New Artwork",
-	"Choose Artists": "Choose Artists",
-	"Choose Artists to associate with this item.": "Choose Artists to associate with this item.",
-	"New Artist": "New Artist",
-	"Choose Articles": "Choose Articles",
-	"Choose Articles to associate with this item.": "Choose Articles to associate with this item.",
-	"New Article": "New Article",
-	"Choose Events": "Choose Events",
-	"Choose Events to associate with this item.": "Choose Events to associate with this item.",
-	"New Event": "New Event",
-	"Search Events...": "Search Events...",
-	"Save Columns": "Save Columns",
-	"Column Configuration": "Column Configuration",
-	"Three Columns (3 / 3 / 2)": "Three Columns (3 / 3 / 2)",
-	"Two Columns (5 / 3)": "Two Columns (5 / 3)",
-	"Two Columns (3 / 5)": "Two Columns (3 / 5)",
-	"Background": "Background",
-	"None": "None",
-	"Cream": "Cream",
+	"Edit Single Image": "Editar Imagen unica",
+	"Save Mixed Content": "Guardar Contenido mixto",
+	"Content to Link": "Contenido para vincular",
+	"Choose Documents": "Seleccione Documentos",
+	"Select the appropriate tab to choose each type of content.": "Seleccione la pestaña correspondiente para elegir cada tipo de contenido.",
+	"Choose Artworks": "Seleccionar Ventas",
+	"Choose Artworks to associate with this item.": "Elija Ventas para asociarlas con este elemento.",
+	"New Artwork": "Nueva Venta",
+	"Choose Artists": "Seleccionar Producto",
+	"Choose Artists to associate with this item.": "Elija Productos para asociarlas con este elemento.",
+	"New Artist": "Nuevo Producto",
+	"Choose Articles": "Seleccione Articulos",
+	"Choose Articles to associate with this item.": "Elija Articulos para asociarlas con este elemento.",
+	"New Article": "Nuevo Articulo",
+	"Choose Events": "Seleccione Eventos",
+	"Choose Events to associate with this item.": "Elija Eventos para asociarlas con este elemento.",
+	"New Event": "Nuevo Evento",
+	"Search Events...": "Buscar Eventos...",
+	"Save Columns": "Guardar Columnas",
+	"Column Configuration": "Columnas Configuracion",
+	"Three Columns (3 / 3 / 2)": "Tres Columnas (3 / 3 / 2)",
+	"Two Columns (5 / 3)": "Dos Columnas (5 / 3)",
+	"Two Columns (3 / 5)": "Dos Columnas (3 / 5)",
+	"Background": "Fondo",
+	"None": "Ninguno",
+	"Cream": "Crema",
 	"Light Purple": "Light Purple",
-	"Save Logo Mask": "Save Logo Mask",
-	"Edit Logo Mask": "Editar logo"
+	"Save Logo Mask": "Guardar Logo Mask",
+	"Edit Logo Mask": "Editar logo",
+	"Url de imagen": "Url de imagen",
+	"http://www.postres.com": "http://www.postres.com",
+	"Choose Artist": "Choose Artist",
+	"Choose Artist to associate with this item.": "Choose Artist to associate with this item.",
+	"Postre de limon": "Postre de limon",
+	"Choose Category Object Type": "Choose Category Object Type",
+	"Choose Category Object Type to associate with this item.": "Choose Category Object Type to associate with this item.",
+	"New Category Object Type": "New Category Object Type",
+	"Search Category Object Types...": "Search Category Object Types...",
+	"Save Category Object Type": "Save Category Object Type",
+	"Postres de limon": "Postres de limon",
+	"Choose Location": "Choose Location",
+	"Choose Location to associate with this item.": "Choose Location to associate with this item.",
+	"New Location": "New Location",
+	"Search Locations...": "Search Locations...",
+	"Save Location": "Save Location",
+	"Details": "Details",
+	"Address": "Address",
+	"Iza Boyaca": "Iza Boyaca"
 }
